src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Create_Date__c</fullName>
        <description>This field is used to support backdating of account from Salesforce to TRACT.</description>
        <label>Gotransverse Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Currency_Type__c</fullName>
        <description>The Currency of the Billing Account.</description>
        <label>Gotransverse Currency Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Gotransverse Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>This field is used to show error message while making API callout to move Salesforce Account to TRACT db</description>
        <label>Gotransverse Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gotransverse_Bill_Type__c</fullName>
        <label>Gotransverse Bill Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTV_Account_Category__c</fullName>
        <label>Gotransverse Account Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTV_Bill_Cycle__c</fullName>
        <label>Gotransverse Bill Cycle</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTV_Payment_Term__c</fullName>
        <label>Gotransverse Payment Term</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&apos;Not Moved&apos;</defaultValue>
        <label>Gotransverse Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Moved</fullName>
                </value>
                <value>
                    <fullName>Not Moved</fullName>
                </value>
                <value>
                    <fullName>Error Occurred</fullName>
                    <label>Errored</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Exempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gotransverse Tax Exempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tract_Billing_Account__c</fullName>
        <label>Gotransverse Billing Account #</label>
        <length>40</length>
        <type>Text</type>
    </fields>
</CustomObject>